removed padding-right css to fix icon spacing at smaller screen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,6 @@ p {
   }
   @media only screen and (max-width: 960px) {
   .sm-icons .nav-item {
-    padding-right: 1em;
   }
 }
 
